{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 16,
  "lineage": "ac975b92-4118-39d9-3ac5-3fa91d6b27c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testing-app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499887455512:internet-gateway/igw-059e18d8e96aa056c",
            "id": "igw-059e18d8e96aa056c",
            "owner_id": "499887455512",
            "tags": {
              "Name": "testing-app-igw"
            },
            "tags_all": {
              "Name": "testing-app-igw"
            },
            "vpc_id": "vpc-09774df844d3b0bb1"
          },
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testing-app_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499887455512:route-table/rtb-078dd7f20cbf1a0fe",
            "id": "rtb-078dd7f20cbf1a0fe",
            "owner_id": "499887455512",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059e18d8e96aa056c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-app-public-rt"
            },
            "tags_all": {
              "Name": "testing-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09774df844d3b0bb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testing-app_igw",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testing-app_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8d80c2996f94dfa",
            "route_table_id": "rtb-078dd7f20cbf1a0fe",
            "subnet_id": "subnet-02b8acf02e50bdadb"
          },
          "dependencies": [
            "aws_internet_gateway.testing-app_igw",
            "aws_route_table.testing-app_public_rt",
            "aws_subnet.testing-app_public_1",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testing-app_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b487c3565872019",
            "route_table_id": "rtb-078dd7f20cbf1a0fe",
            "subnet_id": "subnet-0e9f0a53331f2c964"
          },
          "dependencies": [
            "aws_internet_gateway.testing-app_igw",
            "aws_route_table.testing-app_public_rt",
            "aws_subnet.testing-app_public_2",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testing-app_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499887455512:security-group/sg-0aef3f77bab36d1b9",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aef3f77bab36d1b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testing-app-alb-sg",
            "name_prefix": "",
            "owner_id": "499887455512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-app-alb-sg"
            },
            "tags_all": {
              "Name": "testing-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09774df844d3b0bb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testing-app_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499887455512:security-group/sg-096240160b1bfe8d2",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096240160b1bfe8d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aef3f77bab36d1b9"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "testing-app-ecs-sg",
            "name_prefix": "",
            "owner_id": "499887455512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-app-ecs-sg"
            },
            "tags_all": {
              "Name": "testing-app-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09774df844d3b0bb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.testing-app_alb_sg",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testing-app_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499887455512:subnet/subnet-02b8acf02e50bdadb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b8acf02e50bdadb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499887455512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-app-public-1"
            },
            "tags_all": {
              "Name": "testing-app-public-1"
            },
            "vpc_id": "vpc-09774df844d3b0bb1"
          },
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testing-app_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499887455512:subnet/subnet-0e9f0a53331f2c964",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9f0a53331f2c964",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499887455512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-app-public-2"
            },
            "tags_all": {
              "Name": "testing-app-public-2"
            },
            "vpc_id": "vpc-09774df844d3b0bb1"
          },
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testing-app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499887455512:vpc/vpc-09774df844d3b0bb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08db8765096d0e7ae",
            "default_route_table_id": "rtb-0b04055ebad77bbb1",
            "default_security_group_id": "sg-02e051a05ef024848",
            "dhcp_options_id": "dopt-02ee3e1031707d07e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09774df844d3b0bb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b04055ebad77bbb1",
            "owner_id": "499887455512",
            "tags": {
              "Name": "testing-app-vpc"
            },
            "tags_all": {
              "Name": "testing-app-vpc"
            }
          }
        }
      ]
    }
  ]
}